<resources>
    <string name="app_name">notes_completed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="delete_confirmation">Are you sure you want to delete the note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_your_email">Enter Your Email .....</string>
    <string name="enter_your_pass">Enter Your Password .....</string>
    <string name="re_enter_your_pass">Re-enter Your Password .....</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_has_profile">User has profile</string>
    <string name="sign_in">Sign in</string>
    <string name="click_to_sign_in">Click to sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="notes">Notes</string>
    <string name="not_registered_yet">Not Registered Yet?</string>
</resources>